cmake_minimum_required(VERSION 3.5)

project(HI-LO_GAME LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(HI-LO_GAME main.cpp)

include(GNUInstallDirs)
install(TARGETS HI-LO_GAME
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
